# fast-agent

./: .gitignore  CLAUDE.md  README.md  USAGE.md  clean_environment.py  hello.py  main.py  memory_acceptance_checklist.md  memory_test_report.json  pyproject.toml  requirements.txt  run.sh  test_crew_memory.py  test_crew_memory_simple.py  test_crewai_memory_temp.py  test_embedding.py  test_mcp_connection.py  test_memory_basic.py  test_qwen_temp.py  tools_cache.json  verify_setup.py
doc/: ARCHITECTURE.md  MEMORY_TROUBLESHOOTING.md  MVP_PSEUDOCODE.md  MVP_TASKS.md  PRD.md  REFERENCE_AND_EXAMPLES.md  TOOLS_SURVEY.md
src/: crew.py  main.py  tool_inspector.py  tools.py
src/k8s_copilot/: crew.py
src/k8s_copilot/config/: agents.yaml  tasks.yaml
src/ops_crew/: __init__.py  crew.py
src/ops_crew/config/: agents.yaml  tasks.yaml
test/: README.md  __init__.py
test/memory/: __init__.py  test_memory_simple.py  test_qwen_api.py
test/tools/: __init__.py  benchmark_memory.py
